[metadata]
name = dynamic_loader
version = 1.0.8
author = Yousef Abuzahrieh
author_email = yousefzahrieh17@gmail.com
description =  Python utility designed to enable dynamic loading and processing of files.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yousefabuz17/DataLoader
download_url = https://github.com/yousefabuz17/DataLoader.git
platforms = Windows, Linux, MacOS
license = Apache Software License
python_requires = >=3.10
install_requires = 
    pytest
    numpy
    pandas
    pdfminer.six
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Utilities

[options]
packages = find:
package_dir =
    = src

[options.packages.find]
where = src